Do not reorder field on functionnalKey so equals depends on the order.